--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,8 @@
     "start": "nodemon"
   },
   "dependencies": {
+    "apollo-server": "^2.9.16",
+    "graphql": "^14.6.0",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   },
