Add prettier scripts to client and server workspaces and root

--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "private": true,
-  "workspaces": ["client", "server"],
+  "workspaces": [
+    "client",
+    "server"
+  ],
   "name": "todo-apollo-graphql",
   "version": "1.0.0",
   "description": "Simple todo app using Apollo and an in-memory server",
   "main": "index.js",
   "scripts": {
-    "start": "yarn workspace server start & yarn workspace client start"
+    "start": "yarn workspace server start & yarn workspace client start",
+    "prettier": "yarn workspace server prettier && yarn workspace client prettier"
   },
   "author": "",
   "license": "ISC"
