--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon",
+    "prettier": "prettier --write ./{*,**/*}.{ts,tsx,json,md,yml}"
   },
   "dependencies": {
     "apollo-server": "^2.9.16",
