--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,7 @@
     "typescript": "~3.7.2"
   },
   "devDependencies": {
-    "prettier": "^1.19.1",
-    "pretty-quick": "^2.0.1"
+    "prettier": "^1.19.1"
   },
   "eslintConfig": {
     "extends": "react-app"
