--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.2",
-    "prettier": "^1.19.1",
-    "pretty-quick": "^2.0.1"
+    "prettier": "^1.19.1"
   }
 }
