--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,21 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon",
-    "prettier": "prettier --write ./{*,**/*}.{ts,tsx,json,md,yml}"
+    "prettier": "prettier --write ./{*,**/*}.{ts,tsx,json,md,yml}",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "apollo-server": "^2.9.16",
     "graphql": "^14.6.0",
     "ts-node": "^8.6.2",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "utility-types": "^3.10.0"
   },
   "devDependencies": {
+    "@graphql-codegen/add": "^1.12.1",
+    "@graphql-codegen/cli": "^1.12.1",
+    "@graphql-codegen/typescript": "1.12.1",
+    "@graphql-codegen/typescript-resolvers": "1.12.1",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1"
   }
