--- a/server/codegen.yml
+++ b/server/codegen.yml
@@ -1,11 +1,11 @@
 overwrite: true
-schema: "http://localhost:4000"
+schema: 'http://localhost:4000'
 documents: null
 generates:
   src/__generated__/graphql.ts:
     plugins:
-      - "typescript"
-      - "typescript-resolvers"
+      - 'typescript'
+      - 'typescript-resolvers'
       - add: "import { DeepPartial } from 'utility-types';"
     config:
       maybeValue: T | null | undefined
