--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon",
-    "prettier": "prettier --write ./{*,**/*}.{ts,tsx,json,md,yml}",
+    "prettier": "prettier --write \"{*,**/*}.{ts,tsx,json,md,yml,css}\"",
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
