--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "apollo-server": "^2.9.16",
     "graphql": "^14.6.0",
+    "knex": "^0.20.8",
+    "sqlite3": "^4.1.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5",
     "utility-types": "^3.10.0"
