--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apollo-server": "^2.9.16",
     "graphql": "^14.6.0",
+    "hashids": "^2.1.0",
     "knex": "^0.20.8",
     "sqlite3": "^4.1.1",
     "ts-node": "^8.6.2",
