Loading items for each todo list via dataloader

--- a/server/codegen.yml
+++ b/server/codegen.yml
@@ -12,3 +12,4 @@ generates:
       avoidOptionals: false
       useIndexSignature: true
       defaultMapper: DeepPartial<{T}>
+      contextType: ../context#Context
