--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "apollo-server": "^2.9.16",
+    "dataloader": "^2.0.0",
     "graphql": "^14.6.0",
     "hashids": "^2.1.0",
     "knex": "^0.20.8",
