cd back to root dir in yarn setup — causes husky to otherwise work in the server dir and not find hooks

--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     }
   },
   "devDependencies": {
+    "husky": "^4.2.1",
     "pretty-quick": "^2.0.1"
   },
-  "dependencies": {
-    "husky": "^4.2.1"
-  }
+  "dependencies": {}
 }
