--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon",
     "prettier": "prettier --write \"{*,**/*}.{ts,tsx,json,md,yml,css}\"",
     "codegen": "graphql-codegen --config codegen.yml",
-    "setup": "cd ./src/db && rm -f todo.db.sqlite3 && knex migrate:latest && knex seed:run"
+    "setup": "cd ./src/db && rm -f todo.db.sqlite3 && knex migrate:latest && knex seed:run && cd ../../"
   },
   "dependencies": {
     "apollo-server": "^2.9.16",
