--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "prettier": "prettier --write \"{*,**/*}.{ts,tsx,json,md,yml,css}\""
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -16,12 +18,17 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "styled-components": "^5.0.0",
     "typescript": "~3.7.2"
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^4.4.2",
     "prettier": "^1.19.1"
   },
   "eslintConfig": {
