--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "prettier": "prettier --write \"{*,**/*}.{ts,tsx,json,md,yml,css}\""
+    "prettier": "prettier --write \"{*,**/*}.{ts,tsx,json,md,yml,css}\"",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@graphql-codegen/cli": "^1.12.1",
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -19,7 +22,10 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "apollo-boost": "^0.4.7",
+    "graphql": "^14.6.0",
     "react": "^16.12.0",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
@@ -27,6 +33,10 @@
     "typescript": "~3.7.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.12.1",
+    "@graphql-codegen/typescript": "1.12.1",
+    "@graphql-codegen/typescript-operations": "1.12.1",
+    "@graphql-codegen/typescript-react-apollo": "1.12.1",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.2",
     "prettier": "^1.19.1"
