--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
     "apollo-boost": "^0.4.7",
+    "date-fns": "^2.9.0",
     "graphql": "^14.6.0",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
@@ -30,7 +31,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "styled-components": "^5.0.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "utility-types": "^3.10.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.12.1",
@@ -39,6 +41,8 @@
     "@graphql-codegen/typescript-react-apollo": "1.12.1",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.2",
+    "jest-date-mock": "^1.0.8",
+    "jest-styled-components": "^7.0.0",
     "prettier": "^1.19.1"
   },
   "eslintConfig": {
