--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "utility-types": "^3.10.0"
   },
   "devDependencies": {
+    "@apollo/react-testing": "^3.1.3",
     "@graphql-codegen/cli": "^1.12.1",
     "@graphql-codegen/typescript": "1.12.1",
     "@graphql-codegen/typescript-operations": "1.12.1",
